# miso-drag-and-drop

./: Makefile  README.md  app.cabal  cabal.project
app/: Main.hs
assets/: style.css
static/: index.html
